tests/paczka1/small_fuzzy/62484475.err
Error in line 5: 0NIu A764 85,0
Error in line 3: UBVdVU A764 62,4
Error in line 10: UBVdVU A132 86,5
